--- a/index.html
+++ b/index.html
@@ -38,10 +38,16 @@
 
     <h3>Projects</h3>
 
-    <div>
-        <div class="project-tile"> <a href="project1.html">1 example text</a></div>
-        <div class="project-tile">Project 2 example text</div>
-        <div class="project-tile">Project 3 example</div>
+    <div class="tile">
+        <p><a href=project1.html>Project tile 1</a></p>
+    </div>
+
+    <div class="tile">
+        <p>Project tile 2</p>
+    </div>
+
+    <div class="tile2">
+        <p>Project tile 3</p>
     </div>
 
 </body>
