--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
     <div class="tile">
         <p><a href=project1.html>Project tile 1</a></p>
     </div>
-
+    <br>
     <div class="tile">
         <p>Project tile 2</p>
     </div>
-
-    <div class="tile2">
-        <p>Project tile 3</p>
+    <br>
+    <div class="tile">
+        <p>Project tile 2</p>
     </div>
 
 </body>
