--- a/index.html
+++ b/index.html
@@ -38,16 +38,22 @@
 
     <h3>Projects</h3>
 
-    <div class="tile">
-        <p><a href=project1.html>Project tile 1</a></p>
+    <div class="tile"><a href="project1.html">
+            <div class=project-name>Project tile 1</div>
+            <div class=project-role>UX, UI</div>
+        </a>
     </div>
     <br>
-    <div class="tile">
-        <p>Project tile 2</p>
+    <div class="tile"><a href="project2.html">
+            <div class=project-name>Project tile 2</div>
+            <div class=project-role>Brand, UX, UI</div>
+        </a>
     </div>
     <br>
-    <div class="tile">
-        <p>Project tile 2</p>
+    <div class="tile"><a href="project3.html">
+            <div class=project-name>Project tile 3</div>
+            <div class=project-role>UI</div>
+        </a>
     </div>
 
 </body>
