--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
                 <p class="program">Front-End Development</p>
                 <p class="institution">General Assembly | 2023</p>
                 <p class="program">UX & UI Design</p>
-                <p class="institution">RMIT | 2022</p>
+                <p class="institution">RMIT | 2020, 2021</p>
                 <p class="program">Bachelor of Arts (Honours), Psychology</p>
                 <p class="institution">University of Queensland | 2014</p>
                 <p class="program">Bachelor of Arts (Psychology & Criminology)</p>
@@ -70,7 +70,7 @@
             <p class="program">Data Analysis</p>
             <p class="institution">Google Analytics (GA4)</p>
             <p class="program">Tools</p>
-            <p class="institution">Figma, Figjam, Miro, Adobe Suite, Gather Content, Octopus, Optimal Workshop, Bugherd,
+            <p class="institution">Figma, Figjam, Miro, Adobe Suite, GatherContent, Octopus, Optimal Workshop, Bugherd,
                 Wordpress CMS, Drupal CMS, Jira</p>
             <p class="program">Languages</p>
             <p class="institution">English, Croatian</p>
