--- a/about.html
+++ b/about.html
@@ -41,10 +41,11 @@
                 research skills to design user-friendly, intuitive and accessible digital products.</p><br>
 
             <p>With experience in the government and private sectors, I am skilled at stakeholder management, having
-                delivered successful websites and mobile applications and have worked in the user interfce space,
+                delivered successful websites and mobile applications, and have worked in the user interface space,
                 applying the same dedication, creativity and desire to innovate.</p><br>
 
-            <p>In my downtime, I like to play pretend in the hopes of becoming a design/dev unicorn.</p>
+            <p>In my downtime, I like to play pretend in the hopes of becoming a design/dev unicorn. See my github here.
+            </p>
 
             <h4 class="about-heading">Education</h4>
             <section>
