--- a/project1.html
+++ b/project1.html
@@ -31,7 +31,12 @@
         </ul>
     </nav>
 
-    </div><img class="project1-img" src="/Users/iva/Desktop/VS Code/PORTFOLIO-CODE/Images/20231112_065543.jpg"
-        alt="Header image"></div>
+    <section class="image-text-button"
+        style="background-image:url('/Users/iva/Desktop/VS Code/PORTFOLIO-CODE/Images/20231112_065543.jpg');">
+    </section>
+
+    <div class="placeholder">
+        <p>HELLO</p>
+    </div>
 
 </body>
