--- a/project2.html
+++ b/project2.html
@@ -31,4 +31,12 @@
         </ul>
     </nav>
 
+    <section class="image-text-button"
+        style="background-image:url('/Users/iva/Desktop/VS Code/PORTFOLIO-CODE/Images/20231112_065543.jpg');">
+    </section>
+
+    <div class="placeholder">
+        <p>HELLO</p>
+    </div>
+
 </body>
