--- a/project1.html
+++ b/project1.html
@@ -31,8 +31,7 @@
         </ul>
     </nav>
 
-    <section class="image-text-button"
-        style="background-image:url('/Users/iva/Desktop/VS Code/PORTFOLIO-CODE/Images/20231112_065543.jpg');">
+    <section class="image-text-button" style="background-image:url('/Images/20231112_065543.jpg');">
     </section>
 
     <div class="placeholder">
