--- a/about.html
+++ b/about.html
@@ -7,27 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Iva Dujmovic</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="images" href="./Users/iva/ga-project/images">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="images" href="./Users/iva/Desktop/VS Code/PORTFOLIO-CODE/Images">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="left-nav">
-            <a href="index.html">Iva Dujmovic</a>
+            <h6><a href="index.html">Iva Dujmovic</a></h6>
         </div>
         <ul class=right-nav>
-            <li><a href="#Projects">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <h6>
+                <li><a href="#Projects">Projects</a></li>
+            </h6>
+            <h6>
+                <li><a href="about.html">About</a></li>
+            </h6>
         </ul>
     </nav>
 
