--- a/index.html
+++ b/index.html
@@ -7,54 +7,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Iva Dujmovic</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="images" href="./Users/iva/ga-project/images">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="images" href="./Users/iva/Desktop/VS Code/PORTFOLIO-CODE/Images">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="left-nav">
-            <a href="index.html">Iva Dujmovic</a>
+            <h6><a href="index.html">Iva Dujmovic</a></h6>
         </div>
         <ul class=right-nav>
-            <li><a href="#Projects">Projects</a></li>
-            <li><a href="about.html">About</a></li>
+            <h6>
+                <li><a href="#Projects">Projects</a></li>
+            </h6>
+            <h6>
+                <li><a href="about.html">About</a></li>
+            </h6>
         </ul>
     </nav>
 
     <section class="hp-intro">
-        <h1>Hello!</h1><br>
+        <h1>Hello</h1><br>
         <div class=intro-text>
-            <h2>I'm Iva, a UX/UI designer based in Melbourne</h2>
+            <h3>I'm Iva, a UX/UI designer transforming insights<br>into insights</h3>
+        </div>
+        <div class="small-intro">
+            <h6>Scroll on for the good stuff</h6>
         </div>
     </section>
 
     <section class="projects">
-        <h3>Projects</h3>
-        <div class="tile"><a href="project1.html">
-                <div class=project-name>Compensation Scheme of Last Resort (CSLR)</div>
-                <div class=project-role>Brand, UX, UI</div>
+        <div class="tile pas"><a href="project1.html">
+                <h2 class='project-name'>Parramatta Artist Studios</h2>
+                <h6>
+                    <ul class=project-role>
+                        <li class="list-start">UX research</li>
+                        <li class="list-follow">UI design</li>
+                    </ul>
+                </h6>
             </a>
         </div>
         <br>
-        <div class="tile"><a href="project2.html">
-                <div class=project-name>Parramatta Artist's Studio</div>
-                <div class=project-role>UI</div>
+        <div class="tile stv"><a href="project2.html">
+                <h2 class=project-name>Safe Transport Victoria</h2>
+                <h6>
+                    <ul class=project-role>
+                        <li class="list-start">UX research</li>
+                        <li class="list-follow">UI design</li>
+                    </ul>
+                </h6>
             </a>
         </div>
         <br>
-        <div class="tile"><a href="project3.html">
-                <div class=project-name>Safe Transport Victoria Boating Safety App</div>
-                <div class=project-role>UX, UI</div>
+        <div class="tile cslr"><a href="project3.html">
+                <h2 class=project-name>Compensation Scheme of Last Resort</h2>
+                <h6>
+                    <ul class=project-role>
+                        <li class="list-start">Brand development</li>
+                        <li class="list-follow">UX research</li>
+                        <li class="list-follow">UI design</li>
+                    </ul>
+                </h6>
             </a>
         </div>
     </section>
