--- a/about.html
+++ b/about.html
@@ -41,7 +41,8 @@
                 delivered successful websites and mobile applications, and have worked in the user interface space,
                 applying the same dedication, creativity and desire to innovate.</p><br>
 
-            <p>In my downtime, I like to play pretend in the hopes of becoming a design/dev unicorn. See my github here.
+            <p>In my downtime, I like to play pretend in the hopes of becoming a design/dev unicorn. See my github
+                here// like to dabble in developing in the hopes of becoming a design/dev unicorn
             </p>
 
             <h4 class="about-heading">Education</h4>
