--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section class="hp-intro">
         <h1>Hello</h1><br>
         <div class=intro-text>
-            <h3>I'm Iva, a UX/UI designer transforming insights<br>into insights</h3>
+            <h4>I'm Iva, a UX/UI designer transforming insights<br>into interfaces.</h4>
         </div>
         <div class="small-intro">
             <h6>Scroll on for the good stuff</h6>
@@ -39,39 +39,51 @@
     </section>
 
     <section class="projects">
-        <div class="tile pas"><a href="project1.html">
-                <h2 class='project-name'>Parramatta Artist Studios</h2>
-                <h6>
-                    <ul class=project-role>
-                        <li class="list-start">UX research</li>
-                        <li class="list-follow">UI design</li>
-                    </ul>
-                </h6>
-            </a>
-        </div>
+        <a href="project1.html" class="tile pas">
+            <h2 class='project-name'>Parramatta Artist Studios</h2>
+            <h6>
+                <ul class=project-role>
+                    <li class="list-start">UX research</li>
+                    <li class="list-follow">UI design</li>
+                </ul>
+            </h6>
+        </a>
         <br>
-        <div class="tile stv"><a href="project2.html">
-                <h2 class=project-name>Safe Transport Victoria</h2>
-                <h6>
-                    <ul class=project-role>
-                        <li class="list-start">UX research</li>
-                        <li class="list-follow">UI design</li>
-                    </ul>
-                </h6>
-            </a>
-        </div>
+        <a href="project2.html" class="tile stv">
+            <h2 class=project-name>Safe Transport Victoria</h2>
+            <h6>
+                <ul class=project-role>
+                    <li class="list-start">UX research</li>
+                    <li class="list-follow">UI design</li>
+                </ul>
+            </h6>
+        </a>
         <br>
-        <div class="tile cslr"><a href="project3.html">
-                <h2 class=project-name>Compensation Scheme of Last Resort</h2>
-                <h6>
-                    <ul class=project-role>
-                        <li class="list-start">Brand development</li>
-                        <li class="list-follow">UX research</li>
-                        <li class="list-follow">UI design</li>
-                    </ul>
-                </h6>
-            </a>
-        </div>
+        <a href="project3.html" class="tile cslr">
+            <h2 class=project-name>Compensation Scheme of Last Resort</h2>
+            <h6>
+                <ul class=project-role>
+                    <li class="list-start">Brand development</li>
+                    <li class="list-follow">UX research</li>
+                    <li class="list-follow">UI design</li>
+                </ul>
+            </h6>
+        </a>
     </section>
+
+
+
+    <footer>
+        <div class=footer-title>
+            <h3>Get in touch</h3>
+        </div>
+        <h6 class="footer-text">Like what you see? Drop me a line via email or connect with me on Linkedin below.</h6>
+        <div class="footer-links">
+            <a href="mailto:idujmovic19@gmail.com">Email me</a>
+            <p>
+                <a href="https://www.linkedin.com/in/ivadujmovic/" target="_blank"
+                    rel="noopener noreferrer">Linkedin</a>
+        </div>
+    </footer>
 
 </body>
