--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                     <li class="list-follow">UI design</li>
                 </ul>
             </h6>
+            <div class="project-show-hover">
+                <img src="./Images/PAS-mockups.png" alt="cool image">
+                <h6>
+                    View case study
+                </h6>
+            </div>
         </a>
         <br>
         <a href="project2.html" class="tile stv">
