--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </h6>
             <div class="project-show-hover">
                 <img src="./Images/PAS-mockups.png" alt="cool image">
-                <h6>
+                <h6 class="tile-cta">
                     View case study
                 </h6>
             </div>
