--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -47,8 +49,8 @@
                     <li class="list-follow">UI design</li>
                 </ul>
             </h6>
-            <div class="project-show-hover">
-                <img src="./Images/PAS-mockups.png" alt="cool image">
+            <div class="pas-show-hover">
+                <img src="./Images/pasHP.png" alt="PAS mockups">
                 <h6 class="tile-cta">
                     View case study
                 </h6>
@@ -63,6 +65,12 @@
                     <li class="list-follow">UI design</li>
                 </ul>
             </h6>
+            <div class="stv-show-hover">
+                <img src="./Images/STVHP.png" alt="STV mockups">
+                <h6 class="tile-cta">
+                    View case study
+                </h6>
+            </div>
         </a>
         <br>
         <a href="project3.html" class="tile cslr">
@@ -74,6 +82,12 @@
                     <li class="list-follow">UI design</li>
                 </ul>
             </h6>
+            <div class="cslr-show-hover">
+                <img src="./Images/HPCSLR.png" alt="CSLR mockups">
+                <h6 class="tile-cta">
+                    View case study
+                </h6>
+            </div>
         </a>
     </section>
 
