--- a/about.html
+++ b/about.html
@@ -30,8 +30,12 @@
 
     <div class='about'>
         <section class="about-left">
-            <p class='tldr'>TL;DR</p>
-            <p class=short-form>I'm Iva, a UX/UI designer based in Melbourne.</p>
+            <p class='tldr'>
+            <h6>TL;DR</h6>
+            </p>
+            <p class=short-form>
+            <h4>I'm Iva, A UX/UI designer turning insights into interfaces.</h4>
+            </p>
         </section>
         <section class="about-right">
             <p>Psychology nerd meets creative, I am passionate about leveraging my understanding of human behaviour and
@@ -45,33 +49,54 @@
                 here// like to dabble in developing in the hopes of becoming a design/dev unicorn
             </p>
 
-            <h4 class="about-heading">Education</h4>
+            <h5 class="about-heading">Education</h5>
             <section>
-                <p class="program">Front-End Development</p>
+                <p class="program">
+                <h6>Front-End Development</h6>
+                </p>
                 <p class="institution">General Assembly | 2023</p>
-                <p class="program">UX & UI Design</p>
+                <p class="program">
+                <h6>UX & UI Design</h6>
+                </p>
                 <p class="institution">RMIT | 2020, 2021</p>
-                <p class="program">Bachelor of Arts (Honours), Psychology</p>
+                <p class="program">
+                <h6>Bachelor of Arts (Honours), Psychology</h6>
+                </p>
                 <p class="institution">University of Queensland | 2014</p>
-                <p class="program">Bachelor of Arts (Psychology & Criminology)</p>
+                <p class="program">
+                <h6>Bachelor of Arts (Psychology & Criminology)</h6>
+                </p>
                 <p>University of Queensland | 2010 - 2013</p>
             </section>
 
-            <h4 class="about-heading">Skills</h4>
-            <p class="program">Digital Design</p>
-            <p class="institution">User journeys, user interviews, user testing, stakeholder workshops, data analysis,
+            <h5 class="about-heading">Skills</h5>
+            <p class="program">
+            <h6>Digital Design</h6>
+            </p>
+            <p class="institution">User journeys, user interviews, user testing, stakeholder workshops, data
+                analysis,
                 report writing, information architecture & treejack testing, site-mapping, wireframing, prototyping,
                 accessibility, UI design</p>
-            <p class="program">Graphic Design</p>
-            <p class="institution">Brand conceptualisation and development</p>
-            <p class="program">Front-End Development</p>
+            <p class="program">
+            <h6>Graphic Design</h6>
+            </p>
+            <p class="institution">Brand development</p>
+            <p class="program">
+            <h6>Front-End Development</h6>
+            </p>
             <p class="institution">HTML, CSS, Javascript</p>
-            <p class="program">Data Analysis</p>
+            <p class="program">
+            <h6>Data Analysis</h6>
+            </p>
             <p class="institution">Google Analytics (GA4)</p>
-            <p class="program">Tools</p>
-            <p class="institution">Figma, Figjam, Miro, Adobe Suite, GatherContent, Octopus, Optimal Workshop, Bugherd,
-                Wordpress CMS, Drupal CMS, Jira</p>
-            <p class="program">Languages</p>
+            <p class="program">
+            <h6>Tools</h6>
+            </p>
+            <p class="institution">Figma, Figjam, Miro, Adobe Suite, GatherContent, Octopus, Optimal Workshop,
+                Bugherd</p>
+            <p class="program">
+            <h6>Languages</h6>
+            </p>
             <p class="institution">English, Croatian</p>
 
 
