--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     </nav>
 
     <section class="hp-intro">
-        <h1>Hello</h1><br>
+        <div class="hello">
+            <h1>Hello</h1><img src="./Images/noun-hello-199863 1.png" alt="wave">
+        </div><br>
         <div class=intro-text>
             <h4>I'm Iva, a UX/UI designer transforming insights<br>into interfaces.</h4>
         </div>
