--- a/project1.html
+++ b/project1.html
@@ -28,7 +28,7 @@
         </ul>
     </nav>
 
-    <section class="image-text-button" style="background-image:url('./Images/Group 706.jpg');">
+    <section class="image-text-button" style="background-image:url('./Images/PAS-BG.jpg');">
         <div class=title>Safe Transport Victoria Boating Safety App</div>
     </section>
 
