--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <section class="hp-intro">
         <div class="hello">
-            <h1>Hello</h1><img src="./Images/noun-hello-199863 1.png" alt="wave">
+            <h1>Hello</h1><img src="./Images/noun-hello-199863 2.svg" alt="wave">
         </div><br>
         <div class=intro-text>
             <h4>I'm Iva, a UX/UI designer transforming insights<br>into interfaces.</h4>
