--- a/project1.html
+++ b/project1.html
@@ -29,11 +29,87 @@
     </nav>
 
     <section class="image-text-button" style="background-image:url('./Images/PAS-BG.jpg');">
-        <div class=title>Safe Transport Victoria Boating Safety App</div>
+        <h3 class=title>Parramatta<br>Artists Studios</h3>
     </section>
 
-    <div class="placeholder">
-        <p>HELLO</p>
+
+
+
+    <div class='about'>
+        <section class="about-left-prj">
+            <p class="program">
+            <h5 class="project-type">Website Design</h5>
+            </p>
+            <p class="program">
+            <h6>Role</h6>
+            </p>
+            <p class="institution">Lead digital designer</p>
+            <p class="program">
+            <h6>Responsibilities</h6>
+            </p>
+            <p class="prj-sub">UX research, UI design</p>
+        </section>
+        <section class="about-right">
+            <h5 class="project-heading">Background</h5>
+            <p>Parramatta Artists' Studios (PAS) is a creative hub based in Western Sydney, Australia. It offers
+                professional studio spaces, residencies, and development programs for visual artists at various stages
+                of their careers.</p><br>
+
+            <p>Housing only a single page within the broader City of Parramatta website, PAS wanted to expand their
+                online presence with a microsite of their own.</p><br>
+
+            <section class="imagery">
+                <img src="./Images/Group 1235.jpg" class="preview-img">
+            </section>
+
+            <h5 class="about-heading">Discovery</h5>
+            <section>
+                <p>After collaborating with another designer on the low-fidelity wireframes, I assumed leadership of the
+                    UI and brand application.</p><br>
+
+                <p>Meeting with the client to understand their vision for the website, I established the
+                    solution needed to:</p><br>
+
+                <ul>
+                    <li class="bullet-point">Maintain enough similarity to the parent site to feel familiar.</li>
+                    <li class="bullet-point">Apply distinct branding elements to give the website its own unique
+                        identity.</li>
+                    <li class="bullet-point"> Ensure the website is fun and artistic, reflecting the creative nature of
+                        the organisation.
+                    </li>
+                </ul><br>
+
+                <p></p>I explored a number of different applications of the brand, working through multiple iterations
+                before arriving at the final solution.</p><br>
+            </section>
+
+            <section class="imagery">
+                <img src="./Images/Group 1236.jpg" class="preview-img">
+            </section>
+
+            <h5 class="about-heading">Solution</h5>
+            <section>
+                <p>The final solution featured playful but subtle hints of the brand to invite users to explore the
+                    site.</p><br>
+                <p>PAS gradients were used to add depth, with a specific focus on two of the brand’s colours: pink and
+                    gold.</p><br>
+                <p>To create a sense of cohesion, the ‘A’ graphic within the PAS logo was incorporated in place of
+                    classic chevrons, seen on the ‘next’ and ‘dropdown’ buttons. This application aligns with design
+                    elements seen across the other Parramatta micro-sites.</p><br>
+                <p>The PAS ‘A’ curve was also incorporated in call-out tiles, replacing the standard straight line.</p>
+                <br>
+                <p>For the purpose of familiarity and ensuring the website maintains a balanced look and feel against
+                    the brand’s bright colours, tiles were kept dark blue, as seen on the Parramatta Town Hall website.
+                </p><br>
+                <p>Finally, for readability, all colour combinations were tested to ensure colour contrast meets a
+                    minimum of WCAG AA accessibility.</p><br>
+                <p>The final product successfully met the project goals, providing users with an intuitive, accessible,
+                    and visually engaging experience.</p><br>
+            </section>
     </div>
+
+    <section class="full-image">
+        <img src="./Images/Group 1237.jpg" class="full-img">
+    </section>
 
 </body>
