--- a/project2.html
+++ b/project2.html
@@ -28,12 +28,93 @@
         </ul>
     </nav>
 
-    <section class="image-text-button"
-        style="background-image:url('/Users/iva/Desktop/VS Code/PORTFOLIO-CODE/Images/20231112_065543.jpg');">
+    <section class="image-text-button" style="background-image:url('./Images/STV-BG.jpg');">
+        <h3 class=title>Safe Transport Victoria Boating Safety</h3>
     </section>
 
-    <div class="placeholder">
-        <p>HELLO</p>
+
+
+
+    <div class='about'>
+        <section class="about-left-prj">
+            <p class="program">
+            <h5 class="project-type">Native mobile app</h5>
+            </p>
+            <p class="program">
+            <h6>Role</h6>
+            </p>
+            <p class="institution">Lead digital designer</p>
+            <p class="program">
+            <h6>Responsibilities</h6>
+            </p>
+            <p class="prj-sub">UX research, UI design</p>
+        </section>
+        <section class="about-right">
+            <h5 class="project-heading">Background</h5>
+            <p>Safe Transport Victoria (STV) is responsible for ensuring the safety and regulation of the state’s
+                transport systems, including public transport, roads, and maritime operations.</p><br>
+
+            <p>With a heavily relied upon boating safety handbook available in PDF, STV requested this resource be
+                turned into a native mobile application users can access offline.</p><br>
+
+            <p>Our goal was to translate the handbook’s detailed content into a format that would be accessible,
+                intuitive, and user-friendly.</p><br>
+
+            <section class="imagery">
+                <img src="./Images/Group 1235.jpg" class="preview-img">
+            </section>
+
+            <h5 class="about-heading">Discovery</h5>
+            <section>
+                <p>To align on the project’s goals and gather insights into the specific needs of the end-user, which
+                    spanned a large and diverse audience of over 400,000 people, we carried out a discovery workshop
+                    with the client. </p><br>
+
+                <p>This workshop led us to understand the primary reasons users reference the handbook: self education
+                    and staying on the right side of the law. Consequently, we were able to identify important chapters
+                    and top tasks. Against this, we analysed the information architecture, retaining information that
+                    aligned with the app’s requirements, and removing any that didn't. In addition to the above, the
+                    client also identified this as an opportunity to increase the public’s understanding of their role
+                    and presence. </p><br>
+
+                <p>Overall, we established that the solution needed to:</p><br>
+
+                <ul>
+                    <li class="bullet-point">Ensure a smooth and intuitive app, users can navigate easily.</li>
+                    <li class="bullet-point">Highlight important sections of the handbook.</li>
+                    <li class="bullet-point">Create a seamless transition between PDF and app.
+                    </li>
+                    <li class="bullet-point">Create a seamless transition between PDF and app.
+                    </li>
+                </ul><br>
+            </section>
+
+            <section class="imagery">
+                <img src="./Images/Group 1236.jpg" class="preview-img">
+            </section>
+
+            <h5 class="about-heading">Solution</h5>
+            <section>
+                <p>With a solid understanding of the project, we got to designing the wireframes, taking a mobile first
+                    approach.</p><br>
+                <p>Quick links were added to the top of the homepage, allowing direct access to sections we recognised
+                    were most important during discovery. Followed by a dedicated area for campaign banners and the 4
+                    chapters selected for the app.</p><br>
+                <p>Within the lower levels, we added ‘back’ and ‘next’ buttons to the top and bottom of each page,
+                    mimicking chapters in a book. These were labelled with the relevant section’s title for additional
+                    clarity. </p><br>
+                <p>We colour coded chapters for easy navigation, applying one brand colour to each chapter.</p>
+                <br>
+                <p>Chapter buttons had accents of their respective colour to identification, with a full application on
+                    hover for desktop.
+                </p><br>
+                <p>For additional engagement, we applied some fun visual elements to the design, including the Safe
+                    Transport pattern and an ocean image in the background.</p><br>
+                <p>The successful transformation of the STV maritime safety handbook marked a significant achievement
+                    for both our team and the client. By leveraging key insights gained during the discovery phase, we
+                    were able to create a user-friendly, accessible app that effectively met the needs of over 400,000
+                    users.</p><br>
+            </section>
     </div>
 
 </body>
