--- a/project3.html
+++ b/project3.html
@@ -29,12 +29,106 @@
         </ul>
     </nav>
 
-    <section class="image-text-button"
-        style="background-image:url('/Users/iva/Desktop/VS Code/PORTFOLIO-CODE/Images/20231112_065543.jpg');">
+    <section class="image-text-button" style="background-image:url('./Images/CSLR-BG.jpg');">
+        <h3 class=title>Compensation Scheme of Last Resort</h3>
     </section>
 
-    <div class="placeholder">
-        <p>HELLO</p>
+
+
+
+    <div class='about'>
+        <section class="about-left-prj">
+            <p class="program">
+            <h5 class="project-type">Brand and website design</h5>
+            </p>
+            <p class="program">
+            <h6>Role</h6>
+            </p>
+            <p class="institution">Lead digital designer</p>
+            <p class="program">
+            <h6>Responsibilities</h6>
+            </p>
+            <p class="prj-sub">Brand development, UX research, UI design</p>
+        </section>
+        <section class="about-right">
+            <h5 class="project-heading">Background</h5>
+            <p>The Compensation Scheme of Last Resort (CSLR) is a newly established scheme helping victims of financial
+                misconduct receive compensation, which was previously unavailable to them.</p><br>
+
+            <p>As a new entity, CSLR needed both a brand and a website.</p><br>
+
+            <section class="imagery">
+                <img src="./Images/HPCSLR.png" class="preview-img">
+            </section>
+
+            <h5 class="about-heading">Discovery</h5>
+            <section>
+                <p>In order to understand the client’s needs we facilitated a number of discovery sessions and
+                    interactive workshops with key stakeholders.</p><br>
+
+                <p>As a brand, CSLR required to be distinctively different from the Australian Financial Complaints
+                    Authority (AFCA), an independent dispute resolution service. Serving a different function within the
+                    financial sector, they did not wish to be confused.</p><br>
+
+                <p>Meanwhile, interactive workshops helped identify key audiences, top tasks and user journeys. This
+                    resulted in an understanding of the user groups, the process, but most importantly and perhaps
+                    unexpectedly, the breadth and importance of emotions felt along the way. </p><br>
+
+                <p>We established that the solution needed to:</p><br>
+
+                <ul>
+                    <li class="bullet-point">Be distinctively different to AFCA.</li>
+                    <li class="bullet-point">Be hopeful and positive as a brand, making users feel safe and welcome.
+                    </li>
+                    <li class="bullet-point">Present complex content in a clear and accessible manner.
+                    </li>
+                    <li class="bullet-point">Ensure an intuitive layout and navigation, enabling users to understand
+                        CSLR’s process and find information they need easily.
+                    </li>
+                </ul><br>
+            </section>
+
+            <section class="imagery">
+                <img src="./Images/IA-CSLR.jpg" class="preview-img">
+            </section>
+
+            <h5 class="about-heading">Solution</h5>
+            <section>
+                <p class="sub-title">Brand development</p>
+                <p>As the lead digital designer on this project, I was invited to collaborate with the creative team on
+                    the branding process. </p><br>
+                <p>Despite the seriousness of CSLR’s role, we were able to get quite creative and fun with the brand to
+                    meet the objective of a hopeful, welcoming brand.
+                </p><br>
+                <p>We explored the concept of a last resort and giving people one last chance. People in a tough
+                    situation sending out a signal for help led to proposing the idea of morse code.</p>
+                <br>
+                <p>The dots and dashes visible in the logo is the short-hand morse code for ‘full stop’ which is a nod
+                    to CSLR being the final point of resolution.
+                </p><br>
+                <p>In difficult situations, people don't want ambiguous acronyms. So the decision to use the
+                    organisation’s full name was made, to better describe what they do. </p><br>
+                <p>Finally, a soft pastel gradient was applied to the morse pattern, signifying a light at the end of
+                    the tunnel and inspiring hope in a difficult situation.</p><br>
+            </section>
+
+            <section class="imagery">
+                <img src="./Images/CSLRLogo.jpg" class="preview-cslr">
+            </section>
+
+            <section>
+                <p class="sub-title">Website</p>
+                <p>The website’s interface is clean with plenty of white space, big bold headings and most content
+                    presented in black and white. Brand colours were used sparingly, to prompt action or where content
+                    called for a warm and welcoming tone. </p><br>
+                <p>To tie it all together, we applied elements of the brand graphics, using the morse pattern in the top
+                    banners and as an embellishment where body copy has no heading.
+                </p><br>
+                <p>Collaborating closely with CSLR, both the brand and website launched successfully. The result is a
+                    modern, user-friendly website set to support victims of financial misconduct and build trust within
+                    the financial sector.</p>
+            </section>
     </div>
+
 
 </body>
