--- a/about.html
+++ b/about.html
@@ -20,10 +20,13 @@
         </div>
         <ul class=right-nav>
             <h6>
-                <li><a href="#Projects">Projects</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
             </h6>
             <h6>
                 <li><a href="about.html">About</a></li>
+            </h6>
+            <h6>
+                <li><a href="#contact">Contact</a></li>
             </h6>
         </ul>
     </nav>
@@ -100,5 +103,25 @@
             <p class="institution">English, Croatian</p>
         </section>
     </div>
+
+    <footer>
+        <div class=footer-title id="contact">
+            <h3>Get in touch</h3>
+            <img src="./Images/noun-write-222484 3.svg" alt="pencil illustration" class="pencil">
+        </div>
+        <h6 class="footer-text">Like what you see? Drop me a line via email or connect with me on Linkedin below.
+        </h6>
+        <div class="footer-links">
+            <div class="contact-type">
+                <img src="./Images/paper-plane-icon 1.png" alt="plane" class="mail-icon">
+                <a href="mailto:idujmovic19@gmail.com">Email me</a>
+            </div>
+            <p>
+            <div class="contact-type">
+                <img src="./Images/linkedin.png" alt="plane" class="linkedin-icon">
+                <a href="https://www.linkedin.com/in/ivadujmovic/" target="_blank"
+                    rel="noopener noreferrer">Linkedin</a>
+            </div>
+    </footer>
 
 </body>
