--- a/project1.html
+++ b/project1.html
@@ -20,10 +20,13 @@
         </div>
         <ul class=right-nav>
             <h6>
-                <li><a href="#Projects">Projects</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
             </h6>
             <h6>
                 <li><a href="about.html">About</a></li>
+            </h6>
+            <h6>
+                <li><a href="#contact">Contact</a></li>
             </h6>
         </ul>
     </nav>
@@ -35,7 +38,7 @@
 
 
 
-    <div class='about'>
+    <div class='case-study'>
         <section class="about-left-prj">
             <p class="program">
             <h5 class="project-type">Website Design</h5>
@@ -43,7 +46,7 @@
             <p class="program">
             <h6>Role</h6>
             </p>
-            <p class="institution">Lead digital designer</p>
+            <p class="institution">Lead UI designer</p>
             <p class="program">
             <h6>Responsibilities</h6>
             </p>
@@ -84,7 +87,7 @@
             </section>
 
             <section class="imagery">
-                <img src="./Images/Group 1236.jpg" class="preview-img">
+                <img src="./Images/PAS-LotoHI.jpg" class="preview-img">
             </section>
 
             <h5 class="about-heading">Solution</h5>
@@ -98,6 +101,11 @@
                     elements seen across the other Parramatta micro-sites.</p><br>
                 <p>The PAS ‘A’ curve was also incorporated in call-out tiles, replacing the standard straight line.</p>
                 <br>
+
+                <section class="imagery">
+                    <img src="./Images/PASlogo.jpg" class="small-img">
+                </section>
+
                 <p>For the purpose of familiarity and ensuring the website maintains a balanced look and feel against
                     the brand’s bright colours, tiles were kept dark blue, as seen on the Parramatta Town Hall website.
                 </p><br>
@@ -108,8 +116,55 @@
             </section>
     </div>
 
-    <section class="full-image">
-        <img src="./Images/Group 1237.jpg" class="full-img">
+    <section class="first-full-image">
+        <div class="images">
+            <img src="./Images/D – HP 5.jpg" class="full-img">
+            <img src="./Images/D – L1 – What we do.jpg" class="full-img">
+        </div>
     </section>
+
+    <section class="first-full-image">
+        <div class="images">
+            <img src="./Images/D – Listing – What's on v1b (1) copy.jpg" class="full-img">
+            <img src="./Images/D – Content – List – Event (1).jpg" class="full-img">
+        </div>
+    </section>
+
+    <section class="project-buttons">
+        <a href="project3.html" class="previous-button">
+            <div class=top-line>
+                <img src="./Images/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next">
+                <p>Previous project</p>
+            </div>
+            <h6>Compensation Scheme of Last Resort</h6>
+        </a>
+        <a href="project2.html" class="next-button">
+            <div class=top-line>
+                <p>Next project</p><img src="./Images/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
+                    alt="arrow-next">
+            </div>
+            <h6>Safe Transport Victoria</h6>
+        </a>
+    </section>
+
+    <footer>
+        <div class=footer-title id="contact">
+            <h3>Get in touch</h3>
+            <img src="./Images/noun-write-222484 3.svg" alt="pencil illustration" class="pencil">
+        </div>
+        <h6 class="footer-text">Like what you see? Drop me a line via email or connect with me on Linkedin below.
+        </h6>
+        <div class="footer-links">
+            <div class="contact-type">
+                <img src="./Images/paper-plane-icon 1.png" alt="plane" class="mail-icon">
+                <a href="mailto:idujmovic19@gmail.com">Email me</a>
+            </div>
+            <p>
+            <div class="contact-type">
+                <img src="./Images/linkedin.png" alt="plane" class="linkedin-icon">
+                <a href="https://www.linkedin.com/in/ivadujmovic/" target="_blank"
+                    rel="noopener noreferrer">Linkedin</a>
+            </div>
+    </footer>
 
 </body>
