--- a/project2.html
+++ b/project2.html
@@ -20,10 +20,13 @@
         </div>
         <ul class=right-nav>
             <h6>
-                <li><a href="#Projects">Projects</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
             </h6>
             <h6>
                 <li><a href="about.html">About</a></li>
+            </h6>
+            <h6>
+                <li><a href="#contact">Contact</a></li>
             </h6>
         </ul>
     </nav>
@@ -82,10 +85,7 @@
                 <ul>
                     <li class="bullet-point">Ensure a smooth and intuitive app, users can navigate easily.</li>
                     <li class="bullet-point">Highlight important sections of the handbook.</li>
-                    <li class="bullet-point">Create a seamless transition between PDF and app.
-                    </li>
-                    <li class="bullet-point">Create a seamless transition between PDF and app.
-                    </li>
+                    <li class="bullet-point">Create a seamless transition between PDF and app.</li>
                 </ul><br>
             </section>
 
@@ -116,5 +116,43 @@
                     users.</p><br>
             </section>
     </div>
+
+    <section class="project-buttons">
+        <a href="project1.html" class="previous-button">
+            <div class=top-line>
+                <img src="./Images/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next">
+                <p>Previous project</p>
+            </div>
+            <h6>Parramatta Artist Studio</h6>
+        </a>
+        <a href="project3.html" class="next-button">
+            <div class=top-line>
+                <p>Next project</p><img src="./Images/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
+                    alt="arrow-next">
+            </div>
+            <h6>Compensation Scheme of Last Resort</h6>
+        </a>
+    </section>
+
+
+    <footer>
+        <div class=footer-title id="contact">
+            <h3>Get in touch</h3>
+            <img src="./Images/noun-write-222484 3.svg" alt="pencil illustration" class="pencil">
+        </div>
+        <h6 class="footer-text">Like what you see? Drop me a line via email or connect with me on Linkedin below.
+        </h6>
+        <div class="footer-links">
+            <div class="contact-type">
+                <img src="./Images/paper-plane-icon 1.png" alt="plane" class="mail-icon">
+                <a href="mailto:idujmovic19@gmail.com">Email me</a>
+            </div>
+            <p>
+            <div class="contact-type">
+                <img src="./Images/linkedin.png" alt="plane" class="linkedin-icon">
+                <a href="https://www.linkedin.com/in/ivadujmovic/" target="_blank"
+                    rel="noopener noreferrer">Linkedin</a>
+            </div>
+    </footer>
 
 </body>
