--- a/project1.html
+++ b/project1.html
@@ -16,22 +16,22 @@
 <body>
     <nav class="navbar">
         <div class="left-nav">
-            <h6><a href="index.html">Iva Dujmovic</a></h6>
+            <h6><a href="index.html" class="nav-item">Iva Dujmovic</a></h6>
         </div>
         <ul class=right-nav>
             <h6>
-                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="index.html#projects" class="nav-item">Projects</a></li>
             </h6>
             <h6>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="nav-item">About</a></li>
             </h6>
             <h6>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact" class="nav-item">Contact</a></li>
             </h6>
         </ul>
     </nav>
 
-    <section class="image-text-button" style="background-image:url('./Images/PAS-BG.jpg');">
+    <section class="image-text-button" style="background-image:url('./Images/PAS/Group 12462.jpg');">
         <h3 class=title>Parramatta<br>Artists Studios</h3>
     </section>
 
@@ -62,7 +62,7 @@
                 online presence with a microsite of their own.</p><br>
 
             <section class="imagery">
-                <img src="./Images/Group 1235.jpg" class="preview-img">
+                <img src="./Images/PAS/Group 1235.jpg" class="preview-img">
             </section>
 
             <h5 class="about-heading">Discovery</h5>
@@ -87,7 +87,7 @@
             </section>
 
             <section class="imagery">
-                <img src="./Images/PAS-LotoHI.jpg" class="preview-img">
+                <img src="./Images/PAS/PAS-LotoHI.jpg" class="preview-img">
             </section>
 
             <h5 class="about-heading">Solution</h5>
@@ -103,7 +103,7 @@
                 <br>
 
                 <section class="imagery">
-                    <img src="./Images/PASlogo.jpg" class="small-img">
+                    <img src="./Images/PAS/PASlogo.jpg" class="small-img">
                 </section>
 
                 <p>For the purpose of familiarity and ensuring the website maintains a balanced look and feel against
@@ -117,51 +117,55 @@
     </div>
 
     <section class="first-full-image">
-        <div class="images">
-            <img src="./Images/D – HP 5.jpg" class="full-img">
-            <img src="./Images/D – L1 – What we do.jpg" class="full-img">
-        </div>
+        <img src="./Images/D – HP 5.jpg" class="full-img">
+        <img src="./Images/D – L1 – What we do.jpg" class="full-img">
+        <img src="./Images/D – Content – Exhibitons (1) copy.jpg" class="full-img">
+        <img src="./Images/D – Listing – What's on v1b (1) copy.jpg" class="full-img">
     </section>
 
-    <section class="first-full-image">
-        <div class="images">
-            <img src="./Images/D – Listing – What's on v1b (1) copy.jpg" class="full-img">
-            <img src="./Images/D – Content – List – Event (1).jpg" class="full-img">
-        </div>
+    <section class="sub-full-image">
+        <img src="./Images/D – Content – Exhibitons (1) copy.jpg" class="full-img">
+        <img src="./Images/D – Listing – What's on v1b (1) copy.jpg" class="full-img">
     </section>
+
+
+
+
+
 
     <section class="project-buttons">
         <a href="project3.html" class="previous-button">
             <div class=top-line>
-                <img src="./Images/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next">
+                <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next">
                 <p>Previous project</p>
             </div>
             <h6>Compensation Scheme of Last Resort</h6>
         </a>
         <a href="project2.html" class="next-button">
             <div class=top-line>
-                <p>Next project</p><img src="./Images/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
+                <p>Next project</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
                     alt="arrow-next">
             </div>
             <h6>Safe Transport Victoria</h6>
         </a>
     </section>
 
+
     <footer>
         <div class=footer-title id="contact">
             <h3>Get in touch</h3>
-            <img src="./Images/noun-write-222484 3.svg" alt="pencil illustration" class="pencil">
+            <img src="./Images/HOMEPAGE/noun-write-222484 3.svg" alt="pencil illustration" class="pencil">
         </div>
         <h6 class="footer-text">Like what you see? Drop me a line via email or connect with me on Linkedin below.
         </h6>
         <div class="footer-links">
             <div class="contact-type">
-                <img src="./Images/paper-plane-icon 1.png" alt="plane" class="mail-icon">
+                <img src="./Images/ICONS/paper-plane-icon 1.png" alt="plane" class="mail-icon">
                 <a href="mailto:idujmovic19@gmail.com">Email me</a>
             </div>
             <p>
             <div class="contact-type">
-                <img src="./Images/linkedin.png" alt="plane" class="linkedin-icon">
+                <img src="./Images/ICONS/linkedin.png" alt="plane" class="linkedin-icon">
                 <a href="https://www.linkedin.com/in/ivadujmovic/" target="_blank"
                     rel="noopener noreferrer">Linkedin</a>
             </div>
