--- a/project2.html
+++ b/project2.html
@@ -16,22 +16,22 @@
 <body>
     <nav class="navbar">
         <div class="left-nav">
-            <h6><a href="index.html">Iva Dujmovic</a></h6>
+            <h6><a href="index.html" class="nav-item">Iva Dujmovic</a></h6>
         </div>
         <ul class=right-nav>
             <h6>
-                <li><a href="index.html#projects">Projects</a></li>
+                <li><a href="index.html#projects" class="nav-item">Projects</a></li>
             </h6>
             <h6>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="nav-item">About</a></li>
             </h6>
             <h6>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact" class="nav-item">Contact</a></li>
             </h6>
         </ul>
     </nav>
 
-    <section class="image-text-button" style="background-image:url('./Images/STV-BG.jpg');">
+    <section class="image-text-button" style="background-image:url('./Images/HOMEPAGE/STV-BG.jpg');">
         <h3 class=title>Safe Transport Victoria Boating Safety</h3>
     </section>
 
@@ -120,14 +120,14 @@
     <section class="project-buttons">
         <a href="project1.html" class="previous-button">
             <div class=top-line>
-                <img src="./Images/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next">
+                <img src="./Images/ICONS/arrow_back_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg" alt="arrow-next">
                 <p>Previous project</p>
             </div>
             <h6>Parramatta Artist Studio</h6>
         </a>
         <a href="project3.html" class="next-button">
             <div class=top-line>
-                <p>Next project</p><img src="./Images/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
+                <p>Next project</p><img src="./Images/ICONS/arrow_forward_18dp_000000_FILL0_wght300_GRAD0_opsz20.svg"
                     alt="arrow-next">
             </div>
             <h6>Compensation Scheme of Last Resort</h6>
@@ -135,21 +135,22 @@
     </section>
 
 
+
     <footer>
         <div class=footer-title id="contact">
             <h3>Get in touch</h3>
-            <img src="./Images/noun-write-222484 3.svg" alt="pencil illustration" class="pencil">
+            <img src="./Images/HOMEPAGE/noun-write-222484 3.svg" alt="pencil illustration" class="pencil">
         </div>
         <h6 class="footer-text">Like what you see? Drop me a line via email or connect with me on Linkedin below.
         </h6>
         <div class="footer-links">
             <div class="contact-type">
-                <img src="./Images/paper-plane-icon 1.png" alt="plane" class="mail-icon">
+                <img src="./Images/ICONS/paper-plane-icon 1.png" alt="plane" class="mail-icon">
                 <a href="mailto:idujmovic19@gmail.com">Email me</a>
             </div>
             <p>
             <div class="contact-type">
-                <img src="./Images/linkedin.png" alt="plane" class="linkedin-icon">
+                <img src="./Images/ICONS/linkedin.png" alt="plane" class="linkedin-icon">
                 <a href="https://www.linkedin.com/in/ivadujmovic/" target="_blank"
                     rel="noopener noreferrer">Linkedin</a>
             </div>
