--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
 <body>
     <nav class="navbar">
         <div class="left-nav">
-            <h6><a href="index.html">Iva Dujmovic</a></h6>
+            <h6><a href="index.html" class="nav-item">Iva Dujmovic</a></h6>
         </div>
         <ul class=right-nav>
             <h6>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="#projects" class="nav-item">Projects</a></li>
             </h6>
             <h6>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" class="nav-item">About</a></li>
             </h6>
             <h6>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#contact" class="nav-item">Contact</a></li>
             </h6>
         </ul>
     </nav>
 
     <section class="hp-intro">
         <div class="hello">
-            <h1>Hello</h1><img src="./Images/noun-hello-199863 2.svg" alt="wave" class="wave">
+            <h1>Hello</h1><img src="./Images/HOMEPAGE/noun-hello-199863 2.svg" alt="wave" class="wave">
         </div><br>
         <div class=intro-text>
             <h4>I'm Iva, a UX/UI designer transforming insights<br>into interfaces.</h4>
         </div>
         <div class="small-intro">
             <h6>Scroll on for the good stuff</h6>
-            <img src="./Images/arrow_downward_20dp_000000_FILL0_wght500_GRAD0_opsz20.svg" alt="downwards arrow">
+            <img src="./Images/ICONS/arrow_downward_20dp_000000_FILL0_wght500_GRAD0_opsz20.svg" alt="downwards arrow">
         </div>
     </section>
 
@@ -68,10 +68,10 @@
                 </ul>
             </h6>
             <div class="pas-show-hover">
-                <img src="./Images/pasHP.png" alt="PAS mockups">
+                <img src="./Images/HOMEPAGE/pasHP.png" alt="PAS mockups">
                 <div class="cta">
                     <h6>View case study<h6>
-                            <img src="./Images/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
+                            <img src="./Images/ICONS/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
                                 alt="arrow-next">
                 </div>
             </div>
@@ -86,10 +86,10 @@
                 </ul>
             </h6>
             <div class="stv-show-hover">
-                <img src="./Images/STVHP.png" alt="STV mockups">
+                <img src="./Images/HOMEPAGE/STVHP.png" alt="STV mockups">
                 <div class="cta">
                     <h6>View case study<h6>
-                            <img src="./Images/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
+                            <img src="./Images/ICONS/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
                                 alt="arrow-next">
                 </div>
             </div>
@@ -105,10 +105,10 @@
                 </ul>
             </h6>
             <div class="cslr-show-hover">
-                <img src="./Images/HPCSLR.png" alt="CSLR mockups">
+                <img src="./Images/HOMEPAGE/HPCSLR.png" alt="CSLR mockups">
                 <div class="cta">
                     <h6>View case study<h6>
-                            <img src="./Images/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
+                            <img src="./Images/ICONS/arrow_forward_20dp_FFFFFF_FILL0_wght500_GRAD0_opsz20.svg"
                                 alt="arrow-next">
                 </div>
             </div>
@@ -119,18 +119,18 @@
     <footer>
         <div class=footer-title id="contact">
             <h3>Get in touch</h3>
-            <img src="./Images/noun-write-222484 3.svg" alt="pencil illustration" class="pencil">
+            <img src="./Images/HOMEPAGE/noun-write-222484 3.svg" alt="pencil illustration" class="pencil">
         </div>
         <h6 class="footer-text">Like what you see? Drop me a line via email or connect with me on Linkedin below.
         </h6>
         <div class="footer-links">
             <div class="contact-type">
-                <img src="./Images/paper-plane-icon 1.png" alt="plane" class="mail-icon">
+                <img src="./Images/ICONS/paper-plane-icon 1.png" alt="plane" class="mail-icon">
                 <a href="mailto:idujmovic19@gmail.com">Email me</a>
             </div>
             <p>
             <div class="contact-type">
-                <img src="./Images/linkedin.png" alt="plane" class="linkedin-icon">
+                <img src="./Images/ICONS/linkedin.png" alt="plane" class="linkedin-icon">
                 <a href="https://www.linkedin.com/in/ivadujmovic/" target="_blank"
                     rel="noopener noreferrer">Linkedin</a>
             </div>
